Updated checklist module to have list styles

--- a/template-sections.html
+++ b/template-sections.html
@@ -30,9 +30,7 @@
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
             </div>
             <div class="col-md-10 col-lg-8">
-                <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it
-                    doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in
-                    the hero.</p>
+                <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="video-preview-container mb-3">
                     <iframe src="https://www.youtube.com/embed/EVpBQPw6xTk" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -41,7 +39,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -63,7 +61,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -76,14 +74,14 @@
     <div class="background-image-container semi-transparent-bg-dark">
         <img class="lazyload" data-src="https://placebeard.it/1200x800">
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-start">
-            <div class="col-lg-10 text-center">
+            <div class="col-md-10 col-lg-8 text-center">
                 <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -96,14 +94,14 @@
     <div class="background-image-container semi-transparent-bg-light">
         <img class="lazyload" data-src="https://placebeard.it/1200x800">
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-end">
-            <div class="col-lg-10 text-center">
+            <div class="col-md-10 col-lg-8 text-center">
                 <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -125,7 +123,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -141,7 +139,7 @@
                 <h2>This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -163,7 +161,7 @@
                 <h2>This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -399,7 +397,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-6">
                 <div class="btn-section text-center">
-                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -511,14 +509,10 @@
 
 <!-- COMPARISON TABLE SECTION -->
 <section id="table" class="table">
-    <div class="background-image-container">
-        <img class="lazyload" data-src="https://placebeard.it/1200x800">
-    </div>
-
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-8">
-                <h2 class="text-center text-uppercase text-light">See Why This Company Is The Right Choice For You</h2>
+                <h2 class="text-center text-uppercase">See Why This Company Is The Right Choice For You</h2>
             </div>
         </div>
         <div class="row align-items-center justify-content-center">
@@ -597,108 +591,89 @@
 </section>
 
 <!-- Checklist w/ Form -->
-<section class="single-column" id="try-us-free">
+<section class="single-column">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-9 text-center">
-                <h2>Try Us Free For 7-Days And Find Out How You Can Burn More Fat Than Ever Before And Keep It Off For Good! (Total Value $XXX)</h2>
+                <h2> This is the custom List Section. The styles are present in checklist.scss </h2>
             </div>
 
-            <div class="col-12">
-                <div class="single-column__checks__before text-center">
-                    <img src="http://placeimg.com/1000/300/any" alt=""/>
-                </div>
+            <div class="col-md-10 col-lg-8">
+                <ul class="styled-list">
+                    <li> <p> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p> </li>
+                    <li> <p> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p> </li>
+                    <li> <p> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p> </li>
+                    <li> <p> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p> </li>
+                    <li> <p> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p> </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Last Form Section -->
+<section class="single-column" id="last-section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-lg-9 text-center">
+                <h2>Try Us Free For 7-Days And Find Out How You Can Burn More Fat Than Ever Before And Keep It Off For Good! (Total Value $XXX)! Valid only in <span class="output">This Month</span></h2>
             </div>
 
-            <div class="col-12 col-md-10 col-lg-10">
-                <p>
-                    When you try Orangetheory free for 7 days, our highly-trained coaches will give you the tools you need to get into shape and melt off that stubborn body fat in a fun and dynamic way. BUT most importantly, they’ll also teach you how you can keep it off for good! 
-                </p>
+            <div class="col-12 text-center">
+                <img class="img-fluid-lazyload mb-4" src="http://placeimg.com/1000/300/any" alt=""/>
             </div>
 
-            <div class="col-12 col-md-10 col-lg-10">
-                <div class="single-column__checks">
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>Free Consultation With A Certified Orangetheory Coach:</strong></p>
-                            <p>Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>Drink Bottle, Towel & Bag:</strong> You’ll get your very own bag, towel and drink bottle</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <p><strong>X2 7 Day Gift Cards For Friends And Family:</strong> Get 2 x free 7-Day passes to introduce your friend or partner to Orangetheory Mosman so you can stay committed to your goals while training with friends!</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-12 col-md-10 col-lg-8">
+                <p> When you try Orangetheory free for 7 days, our highly-trained coaches will give you the tools you need to get into shape and melt off that stubborn body fat in a fun and dynamic way. BUT most importantly, they’ll also teach you how you can keep it off for good! </p>
 
-                <div class="single-column__afterchecklist">
-                    <p>PLEASE NOTE: The bonus Orangetheory Starter Packs are only available for a limited time and only while stocks last. Enter your details below now to ensure you don't miss out on this offer.</p>
-                </div>
+                <p> Here is what you will discover: </p>
+
+                <ul class="styled-list">
+                    <li> <p> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p> </li>
+                    <li> <p> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p> </li>
+                    <li> <p> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p> </li>
+                    <li> <p> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p> </li>
+                    <li> <p> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p> </li>
+                </ul>
+
+                <p>PLEASE NOTE: The bonus Orangetheory Starter Packs are only available for a limited time and only while stocks last. Enter your details below now to ensure you don't miss out on this offer.</p>
 
                 <div class="single-column__form">
-                    <form method="POST" class="d-flex flex-column">
-                        <div class="form-row">
-                            <div class="form-group col-md-12">
+                    <form method="POST" action="" class="d-flex flex-column" id="claim-your-free-consultation">
+
+                        <input type="hidden" name="something" value="Lead Form" data-kk-label="Lead Source" />
+                        <input type="hidden" name="planet" value="" />
+
+                        <div class="form-content">
+                            <div class="form-group">
                                 <label for="name">
                                     <span class="icon icon-name"></span>
                                     <input type="text" class="name" name="name" id="name" placeholder="Full Name*" data-kk-label="Full Name" required/>
                                 </label>
                             </div>
-                            <div class="form-group col-md-12">
+                            <div class="form-group">
                                 <label for="email">
                                     <span class="icon icon-email"></span>
                                     <input type="email" class="email" id="email" name="email" placeholder="Email Address*" data-kk-label="Email Address" required>
                                 </label>
                             </div>
-                            <div class="form-group col-md-12">
+                            <div class="form-group">
                                 <label for="phone">
                                     <span class="icon icon-phone"></span>
                                     <input type="text" class="phone" id="phone" name="phone" placeholder="Phone Number*" data-kk-label="Phone Number" required>
                                 </label>
                             </div>
-                            <div class="form-group col-md-12">
+                            <div class="form-group">
                                 <label for="message">
                                     <span class="icon icon-message"></span>
                                     <textarea class="message" id="message" name="message" placeholder="Have questions?" data-kk-label="Have questions?" ></textarea>
                                 </label>
                             </div>
-                            <div class="form-group col-md-12">
+                            <div class="form-group">
                                 <input type="submit" class="btn btn-primary" value="Try us free for 7-days"/>
                             </div>
-                            <input type="hidden" name="something" value="Lead Form" data-kk-label="Lead Source" />
-                            <input type="hidden" name="planet" value="" />
+                            
                         </div>
                         <div class="form-messages"></div>
                     </form>
