Added counter list styles

--- a/template-sections.html
+++ b/template-sections.html
@@ -629,13 +629,13 @@
 
                 <p> Here is what you will discover: </p>
 
-                <ul class="styled-list">
+                <ol class="styled-list">
                     <li> <p> <strong>Free Consultation With A Certified Orangetheory Coach:</strong> Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p> </li>
                     <li> <p> <strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p> </li>
                     <li> <p> <strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p> </li>
                     <li> <p> <strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p> </li>
                     <li> <p> <strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p> </li>
-                </ul>
+                </ol>
 
                 <p>PLEASE NOTE: The bonus Orangetheory Starter Packs are only available for a limited time and only while stocks last. Enter your details below now to ensure you don't miss out on this offer.</p>
 
