--- a/template-sections.html
+++ b/template-sections.html
@@ -612,7 +612,7 @@
 </section>
 
 
-<!-- Last Form Section -->
+<!-- Last Section With Form -->
 <section class="single-column" id="last-section">
     <div class="container">
         <div class="row justify-content-center">
@@ -620,9 +620,9 @@
                 <h2>Try Us Free For 7-Days And Find Out How You Can Burn More Fat Than Ever Before And Keep It Off For Good! (Total Value $XXX)! Valid only in <span class="output">This Month</span></h2>
             </div>
 
-            <div class="col-12 text-center">
+            <!-- <div class="col-12 text-center">
                 <img class="img-fluid-lazyload mb-4" src="http://placeimg.com/1000/300/any" alt=""/>
-            </div>
+            </div> -->
 
             <div class="col-12 col-md-10 col-lg-8">
                 <p> When you try Orangetheory free for 7 days, our highly-trained coaches will give you the tools you need to get into shape and melt off that stubborn body fat in a fun and dynamic way. BUT most importantly, they’ll also teach you how you can keep it off for good! </p>
