Minor style updates & added Steps block section

--- a/template-sections.html
+++ b/template-sections.html
@@ -31,10 +31,12 @@
             </div>
             <div class="col-md-10 col-lg-8">
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
-                <div class="video-preview-container mb-3">
-                    <iframe src="https://www.youtube.com/embed/EVpBQPw6xTk" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <div class="video-preview-container video-container ">
+                    <iframe class="video-iframe" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="overlay"></div>
+                    <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
+                        <img src="assets/prod/images/icon-play.png" alt="">
+                    </button>
                 </div>
             </div>
             <div class="col-md-8 col-lg-6">
@@ -194,8 +196,67 @@
     </div>
 </section>
 
+<!-- Blocks Section for Steps -->
+<section id="steps-block" class="bg-light">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="text-center"> 5 Easy Steps To Get The Maximum Sales Price Using Our "White Elephant" Home Selling System </h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="step p-3 h-100">
+                    <h3 class="step-number mx-auto mb-4 text-center"> 1 </h3>
+                    <h4 class="step-title text-center"> Claim Your FREE, No-Obligation Offer </h4>
+                    <p class="step-copy mb-0"> Enter your details in at the bottom of the page to secure the next available timeslot – after that, our friendly team will contact you to confirm your appointment. </p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="step p-3 h-100">
+                    <h3 class="step-number mx-auto mb-4 text-center"> 2 </h3>
+                    <h4 class="step-title text-center"> Match You With The Perfect Agent </h4>
+                    <p class="step-copy mb-0"> During your consultation, we’ll provide all the value we’ve promised on this page, including matching you with the 3 best real estate agents in your area. </p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="step p-3 h-100">
+                    <h3 class="step-number mx-auto mb-4 text-center"> 3 </h3>
+                    <h4 class="step-title text-center"> Implement Our Proven Sales Plan </h4>
+                    <p class="step-copy mb-0"> After you approve our proposal, we’ll work with you and your real estate agent to implement your sales campaign – whether it’s auction or private treaty. </p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="step p-3 h-100">
+                    <h3 class="step-number mx-auto mb-4 text-center"> 4 </h3>
+                    <h4 class="step-title text-center"> Sell Your Home For Maximum Money! </h4>
+                    <p class="step-copy mb-0"> Now we support you at every step and use our expert negotiation skills to squeeze every last dollar from the buyers and get you the best price possible! </p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="step p-3 h-100">
+                    <h3 class="step-number mx-auto mb-4 text-center"> 5 </h3>
+                    <h4 class="step-title text-center"> Sell Your Home For Maximum Mo </h4>
+                    <p class="step-copy mb-0"> Now we support you at every step and use our expert negotiation skills to squeeze every last dollar from the buyers and get you the best price possible! </p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section text-center">
+                    <a href="#claim-your-free-consultation" class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Testmionials Section -->
-<section class="testimonials bg-light text-center">
+<section class="testimonials text-center text-light">
+    <div class="background-image-container semi-transparent-bg-dark">
+        <img class="lazyload" data-src="https://placebeard.it/1200x800">
+    </div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
@@ -235,7 +296,7 @@
 </section>
 
 <!-- Gallery Section -->
-<section class="gallery text-center">
+<section class="gallery text-center bg-light">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
@@ -315,7 +376,7 @@
                 <div class="slider">
                     <div class="slide">
                         <div class="video-preview-container video-container ">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="video-iframe" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -325,7 +386,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="video-iframe" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -335,7 +396,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="video-iframe" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -345,7 +406,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class="video-iframe" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -406,7 +467,7 @@
 </section>
 
 <!--Featured In Band Section - Logo Row w/ Mobile Slider -->
-<section class="logos bg-light">
+<section class="featured-in bg-light">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
