--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="../assets/prod/css/main.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
     <title>#### REPLACE ME ####</title>
 </head>
@@ -53,13 +53,13 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="name">
-                                    <span class='icon icon-name'></span>
+                                    <span class='icon icon-name'><i class="far fa-user"></i></span>
                                     <input type="text" class="name" name="name" id="name" placeholder="Name" required>
                                 </label>
                             </div>
                             <div class="form-group">
                                 <label for="email">
-                                    <span class='icon icon-email'></span>
+                                    <span class='icon icon-email'><i class="far fa-envelope"></i></span>
                                     <input type="email" class="email" id="email" name="email" placeholder="Email" required>
                                 </label>
                             </div>
