Minor updates after srcset implementation

--- a/template-sections.html
+++ b/template-sections.html
@@ -72,7 +72,7 @@
 </section>
 
 <!-- Hero - Left Aligned Content -->
-<section class="hero-centered text-light">
+<section class="hero-left-aligned text-light">
     <div class="background-image-container semi-transparent-bg-dark">
         <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
     </div>
@@ -92,7 +92,7 @@
 </section>
 
 <!-- Hero - Right Aligned Content -->
-<section class="hero-centered">
+<section class="hero-right-aligned">
     <div class="background-image-container semi-transparent-bg-light">
         <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
     </div>
@@ -276,14 +276,14 @@
                     </div>
                 </div>
                 <!-- Slider Nav -->
-                <div class="prev-arrow testimonial-prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right" d="M57.633,129.007L165.93,237.268c4.752,4.74,12.451,4.74,17.215,0c4.752-4.74,4.752-12.439,0-17.179
                     l-99.707-99.671l99.695-99.671c4.752-4.74,4.752-12.439,0-17.191c-4.752-4.74-12.463-4.74-17.215,0L57.621,111.816
                     C52.942,116.507,52.942,124.327,57.633,129.007z" /></svg>
                 </div>
-                <div class="next-arrow testimonial-next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right_1_" d="M183.189,111.816L74.892,3.555c-4.752-4.74-12.451-4.74-17.215,0c-4.752,4.74-4.752,12.439,0,17.179
@@ -325,14 +325,14 @@
                 </div>
 
                 <!-- Slider Nav -->
-                <div class="prev-arrow gallery-prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right" d="M57.633,129.007L165.93,237.268c4.752,4.74,12.451,4.74,17.215,0c4.752-4.74,4.752-12.439,0-17.179
                     l-99.707-99.671l99.695-99.671c4.752-4.74,4.752-12.439,0-17.191c-4.752-4.74-12.463-4.74-17.215,0L57.621,111.816
                     C52.942,116.507,52.942,124.327,57.633,129.007z" /></svg>
                 </div>
-                <div class="next-arrow gallery-next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right_1_" d="M183.189,111.816L74.892,3.555c-4.752-4.74-12.451-4.74-17.215,0c-4.752,4.74-4.752,12.439,0,17.179
@@ -416,14 +416,14 @@
                     </div>
                 </div>
                 <!-- Slider Nav -->
-                <div class="prev-arrow video-prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right" d="M57.633,129.007L165.93,237.268c4.752,4.74,12.451,4.74,17.215,0c4.752-4.74,4.752-12.439,0-17.179
                     l-99.707-99.671l99.695-99.671c4.752-4.74,4.752-12.439,0-17.191c-4.752-4.74-12.463-4.74-17.215,0L57.621,111.816
                     C52.942,116.507,52.942,124.327,57.633,129.007z" /></svg>
                 </div>
-                <div class="next-arrow video-next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
                     style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
                     <path id="Chevron_Right_1_" d="M183.189,111.816L74.892,3.555c-4.752-4.74-12.451-4.74-17.215,0c-4.752,4.74-4.752,12.439,0,17.179
@@ -657,7 +657,7 @@
 </section>
 
 <!-- Checklist w/ Form -->
-<section class="single-column">
+<section class="single-column bg-light">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-9 text-center">
@@ -750,21 +750,20 @@
 </section>
 
 <!-- Countdown Timer -->
-<section class="countdown text-center" id="countdown">
-    <div class="background-image-container">
-        <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
-    </div>
+<section class="countdown text-center bg-light" id="countdown">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="countdown-timer">
-                    <div class="progressbar"><div class="completed"></div></div>
+                    <!-- PROGRESSBAR COUNTDOWN -->
+                    <div class="progressbar mb-5"><div class="completed"></div></div>
+
+                    <!-- WORD COUNTDOWN TIMER -->
                     <h3 class="training-text" data-end-text="Offer Ended!">
                         <span class="d-block d-lg-inline">OFFER ENDS IN:</span>&nbsp;
                         <span class="time-left color-primary">X HOURS AND X MINUTES</span>
                     </h3>
                 </div>
-
             </div>
         </div>
     </div>
