--- a/free-ebook/index.html
+++ b/free-ebook/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="#### DESCRIPTION HERE ####">
 
-    <link rel="stylesheet" href="../assets/prod/css/main.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-
     <title>#### REPLACE ME ####</title>
+
+    <!-- Compiled Stylesheet -->
+    <link rel="stylesheet" href="../assets/prod/css/main.css">
 </head>
 
 <body class="ebook-page">
@@ -19,18 +18,11 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="header-logo">
-                <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                <img class="lazyload view-animation img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/logo.png" alt="NAME OF COMPANY">
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 181.352 181.352" xml:space="preserve">
-                        <path fill="currentColor" d="M169.393,167.37l-14.919,9.848c-9.604,6.614-50.531,14.049-106.211-53.404
-                            C-5.415,58.873,9.934,22.86,17.134,14.555L29.523,1.678c2.921-2.491,7.328-2.198,9.839,0.811l32.583,38.543l0.02,0.02
-                            c2.384,2.824,2.306,7.22-0.83,9.868v0.029l-14.44,10.415c-5.716,5.667-0.733,14.587,5.11,23.204l27.786,32.808
-                            c12.926,12.477,20.009,18.241,26.194,14.118l12.008-13.395c2.941-2.472,7.328-2.169,9.839,0.821l32.603,38.543v0.02
-                            C172.607,160.316,172.519,164.703,169.393,167.37z"/>
-                    </svg>
-
+                    <img class="view-animation img-fluid" src="../assets/svgs/icon-phone.svg" alt="Icon Phone">
                 </div>
                 <div class="phone-text d-none d-md-flex flex-column">
                     <span>Got Questions?</span>
@@ -45,25 +37,21 @@
     <div class="container">
         <div class="row d-flex flex-column-reverse flex-lg-row align-items-center">
             <div class="col-12 col-lg-7 pr-lg-4">
-                <h4 class="eyebrow"> shocking free report reveals </h4>
+                <p class="eyebrow d-none d-lg-block"> shocking free report reveals </p>
                 <h1 class="d-none d-lg-block"> Nice And Big Super Sexy And Compelling Headline </h1>
                 <p class="subheadline"> Super compelling and punchy sub headline that is generally slightly lighter in colorthan the headline but not so much. </p>
                 <div class="form-container">
-                    <form method="POST" class="d-flex flex-column" id="ebook-form">
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="name">
-                                    <span class='icon icon-name'><i class="far fa-user"></i></span>
-                                    <input type="text" class="name" name="name" id="name" placeholder="Name" required>
-                                </label>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">
-                                    <span class='icon icon-email'><i class="far fa-envelope"></i></span>
-                                    <input type="email" class="email" id="email" name="email" placeholder="Email" required>
-                                </label>
-                            </div>
-                            <div class="form-group">
+                    <form method="POST" action="" id="ebook-form">
+                        <div class="form-content">
+                            <label for="name">
+                                <span class='icon icon-name'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-username.png" alt="Icon User"></span>
+                                <input type="text" class="name" name="name" id="name" placeholder="Name" required>
+                            </label>
+                            <label for="email">
+                                <span class='icon icon-email'><img class="img-fluid view-animation lazyload" data-sizes="auto" data-original-src="../assets/prod/images/icon-email.png" alt="Icon Email"></span>
+                                <input type="email" class="email" id="email" name="email" placeholder="Email" required>
+                            </label>
+                            <div class="btn-section">
                                 <input type="submit" class="btn btn-primary" value="Get My Free Ebook"></input>
                             </div>
                         </div>
@@ -72,8 +60,9 @@
                 </div>
             </div>
             <div class="col-12 col-lg-5 pl-lg-4 text-center">
+                <p class="eyebrow d-lg-none"> shocking free report reveals </p>
                 <h1 class="d-lg-none"> Nice And Big Super Sexy And Compelling Headline </h1>
-                <img class="lazyload book-cover max-width-image" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                <img class="lazyload book-cover max-width-image" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
             </div>
         </div>
     </div>
@@ -89,22 +78,22 @@
             <div class="col-12 col-xl-10">
                 <div class="row slider align-items-center justify-content-center">
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                     <div class="col slide text-center">
-                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+                        <img class="lazyload img-fluid" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
                     </div>
                 </div>
             </div>
@@ -145,7 +134,7 @@
 <!-- Testmionials Section -->
 <section class="testimonials text-center text-light">
     <div class="background-image-container semi-transparent-bg-dark">
-        <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
     </div>
     <div class="container">
         <div class="row justify-content-center">
@@ -166,19 +155,11 @@
                     </div>
                 </div>
                 <!-- Slider Nav -->
-                <div class="prev-arrow testimonial-prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
-                    style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
-                    <path id="Chevron_Right" d="M57.633,129.007L165.93,237.268c4.752,4.74,12.451,4.74,17.215,0c4.752-4.74,4.752-12.439,0-17.179
-                    l-99.707-99.671l99.695-99.671c4.752-4.74,4.752-12.439,0-17.191c-4.752-4.74-12.463-4.74-17.215,0L57.621,111.816
-                    C52.942,116.507,52.942,124.327,57.633,129.007z" /></svg>
+                <div class="prev">
+                    <img class="view-animation img-fluid icon" src="../assets/svgs/icon-previous.svg" alt="Icon Previous">
                 </div>
-                <div class="next-arrow testimonial-next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240.823 240.823"
-                    style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
-                    <path id="Chevron_Right_1_" d="M183.189,111.816L74.892,3.555c-4.752-4.74-12.451-4.74-17.215,0c-4.752,4.74-4.752,12.439,0,17.179
-                    l99.707,99.671l-99.695,99.671c-4.752,4.74-4.752,12.439,0,17.191c4.752,4.74,12.463,4.74,17.215,0l108.297-108.261
-                    C187.881,124.315,187.881,116.495,183.189,111.816z" /></svg>
+                <div class="next">
+                    <img class="view-animation img-fluid icon" src="../assets/svgs/icon-next.svg" alt="Icon Previous">
                 </div>
             </div>
         </div>
@@ -189,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h2> Get <span class="text-underline">INSTANT</span> access to this shocking free report now </h2>
+                <h2> Get <u>INSTANT</u> access to this shocking free report now </h2>
             </div>
             <div class="col-md-8 col-lg-6">
                 <p> You won’t just save time either. When you follow our advice closely, you also [achieve much better results] than you would ever be able to achieve on your own. </p>
@@ -205,16 +186,18 @@
     </div>
 </section>
 
-<footer>
+<!-- Footer - King Kong Tag -->
+<footer class="bg-dark text-white">
     <div class="container">
         <div class="row text-center">
-            <div class="col-12 text-white py-2">
-                <p class="mb-0">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">King Kong</a></p>
+            <div class="col-12 py-4">
+                <p class="mb-0">Landing Page & Digital Marketing by King Kong</p>
             </div>
         </div>
     </div>
 </footer>
 
-    <script type="text/javascript" src="../assets/prod/js/main.js"></script>
+<!-- Custom Scripts -->
+<script type="text/javascript" src="../assets/prod/js/main.js"></script>
 </body>
 </html>
