--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -15,24 +15,15 @@
 
 <body class="thank-you">
 
-<!-- Standard Header -->
 <header class="fixed-top">
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="header-logo">
-                <img class="lazyload"
-                     data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg"
-                    alt="NAME OF COMPANY">
+                <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/logo.png" alt="NAME OF COMPANY">
             </div>
             <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
                 <div class="phone-icon mr-md-2">
-                    <svg class="svg-inline--fa fa-phone fa-w-16" aria-hidden="true" focusable="false"
-                        data-prefix="fas" data-icon="phone" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512" data-fa-i2svg="">
-                        <path fill="currentColor"
-                            d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z">
-                        </path>
-                    </svg>
+                    <img class="view-animation img-fluid" src="../assets/svgs/icon-phone.svg" alt="Icon Phone">
                 </div>
                 <div class="phone-text d-none d-md-flex flex-column">
                     <span>Got Questions?</span>
@@ -43,15 +34,15 @@
     </div>
 </header>
 
-<section id="hero" class="hero-centered">
+<section id="hero" class="hero-centered d-flex justify-content-center align-items-center">
     <div class="background-image-container semi-transparent-bg-light">
-        <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/placeholder.jpg">
+        <img class="lazyload" data-sizes="auto" data-original-src="../assets/prod/images/placeholder.jpg">
     </div>
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-md-8 col-lg-6">
                 <h1>Thanks For Filling Out The Form!</h1>
-                <p class="subheadline mb-4"> We have got your details and We will be in touch with you shortly. </p>
+                <p class="subheadline mb-4"> We have got your details and we will be in touch with you shortly. </p>
                 <a href="/" class="btn btn-primary">Return To Home</a>
             </div>
         </div>
@@ -59,11 +50,11 @@
 </section>
 
 <!-- Footer - King Kong Tag -->
-<footer>
+<footer class="bg-dark text-white">
     <div class="container">
         <div class="row text-center">
-            <div class="col-12 text-white py-2">
-                <p class="mb-0">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">King Kong</a></p>
+            <div class="col-12 py-4">
+                <p class="mb-0">Landing Page & Digital Marketing by King Kong</p>
             </div>
         </div>
     </div>
